--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,35 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="330"
+    android:viewportHeight="347">
+  <group android:scaleX="0.7132565"
+      android:scaleY="0.75"
+      android:translateX="47.31268"
+      android:translateY="43.375">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M5,0L325,0A5,5 0,0 1,330 5L330,342A5,5 0,0 1,325 347L5,347A5,5 0,0 1,0 342L0,5A5,5 0,0 1,5 0z"
+        android:fillColor="#080B60"/>
+    <path
+        android:pathData="M232,52L243,52A5,5 0,0 1,248 57L248,155A5,5 0,0 1,243 160L232,160A5,5 0,0 1,227 155L227,57A5,5 0,0 1,232 52z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M186,112L186,100A5,5 0,0 1,191 95L284,95A5,5 0,0 1,289 100L289,112A5,5 0,0 1,284 117L191,117A5,5 0,0 1,186 112z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M54,112L54,100A5,5 0,0 1,59 95L152,95A5,5 0,0 1,157 100L157,112A5,5 0,0 1,152 117L59,117A5,5 0,0 1,54 112z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M186,242L186,231A5,5 0,0 1,191 226L284,226A5,5 0,0 1,289 231L289,242A5,5 0,0 1,284 247L191,247A5,5 0,0 1,186 242z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M186,277L186,265A5,5 0,0 1,191 260L284,260A5,5 0,0 1,289 265L289,277A5,5 0,0 1,284 282L191,282A5,5 0,0 1,186 277z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M129.55,207.02L137.24,215.11A4.87,5.12 0,0 1,137.24 222.36L71.22,291.79A4.87,5.12 0,0 1,64.32 291.79L56.63,283.7A4.87,5.12 0,0 1,56.63 276.45L122.66,207.02A4.87,5.12 0,0 1,129.55 207.02z"
+        android:fillColor="#86F254"/>
+    <path
+        android:pathData="M56.63,215.11L64.32,207.02A4.87,5.12 0,0 1,71.22 207.02L137.24,276.45A4.87,5.12 0,0 1,137.24 283.7L129.55,291.79A4.87,5.12 0,0 1,122.66 291.79L56.63,222.36A4.87,5.12 0,0 1,56.63 215.11z"
+        android:fillColor="#86F254"/>
+  </group>
 </vector>
